Added dutch language support. Sorry Master Weitz, if the translation is not perfect. Blame the Google Translator, not me :)
And made some cool changes for login page

--- a/nschl002/src/main/resources/messages_de.properties
+++ b/nschl002/src/main/resources/messages_de.properties
@@ -14,6 +14,11 @@ login.title=Login
 login.username=Benutzername
 login.password=Passwort
 login.login=Anmelden
+login.hint=Das korrekte Passwort lautet: {0}
+login.language=Sprache auswählen
+login.german=Deutsch
+login.english=Englisch
+login.dutch=Niederländisch
 
 edit.title=Braten bearbeiten
 edit.submit=Daten absenden
