--- a/nschl002/src/main/resources/messages_en.properties
+++ b/nschl002/src/main/resources/messages_en.properties
@@ -2,8 +2,8 @@ list.title=Offers list
 list.offers=Current offers
 list.durability=Best before
 list.provider=Provider
-list.location=Location
-list.description=description
+list.location=Pickup location
+list.description=Description
 list.vegetarian=Vegetarian scale
 list.delete=delete
 list.edit=edit
@@ -14,6 +14,11 @@ login.title=Login
 login.username=Username
 login.password=Password
 login.login=Login
+login.hint=The correct password is: {0}
+login.language=Choose language
+login.german=German
+login.english=English
+login.dutch=Dutch
 
 edit.title=Edit roast
 edit.submit=Submit data
