--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -22,3 +22,9 @@ login.dutch=Niederländisch
 
 edit.title=Braten bearbeiten
 edit.submit=Daten absenden
+
+signup.title=Registrieren
+signup.username=Benutzername
+signup.password=Passwort
+signup.name=Vollständiger Name
+signup.toc=I habe die Nutzungsbedingungen gelesen.
