--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -22,3 +22,9 @@ login.dutch=Dutch
 
 edit.title=Edit roast
 edit.submit=Submit data
+
+signup.title=Sign up
+signup.username=Username
+signup.password=Password
+signup.name=Full name
+signup.toc=I have read the terms of conditions.
