--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -22,3 +22,9 @@ login.dutch=Nederlands
 
 edit.title=Bieden gebraden
 edit.submit=Verstuur data
+
+signup.title=Registreren
+signup.username=Gebruikersnaam
+signup.password=Wachtwoord
+signup.name=Voor-en achternaam
+signup.toc=Ik heb de gebruiksvoorwaarden gelezen.
